Scrollbar Issue Fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,8 @@ footer {
   background-color: var(--nav-color);
   position: relative;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   padding: 1rem;
   z-index: 3;
   padding-left: 1rem;
