--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -14,8 +14,9 @@
 }
 
 .home {
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
+  padding-bottom: 2rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -117,7 +118,7 @@
 .text {
   font-size: 30px;
   color: white;
-  text-shadow: 2px 2px grey;
+  
   font-weight: bold;
   font-size: 5rem;
   position: relative;
